# better-rvc

./: .gitignore  README.markdown  README.md  filter_data.py  inference_all.py  main.py  pyproject.toml  rvc_get_data.py  setup.sh
LoRa/: README.md  uart_test.py
LoRa/esp32_s3_lora_ble_controller/: esp32_s3_lora_ble_controller.ino
LoRa/esp32_s3_lora_recevier/: esp32_s3_lora_recevier.ino
LoRa/esp32_s3_lora_sender/: esp32_s3_lora_sender.ino
PCB/: ibom.html
cv-recognition/: README.markdown  filter_data.py  inference_all.py  rvc_get_data.py
cv_recognition/: camera.py  inference_all.py
service/: mediamtx.service  stream.service  virtual_cam.service
servo/: README.md  servo.py  test_servo.py  test_servo_180.py
streaming/: stream.sh
